refactor(monitoring): simplify Epic 1 — LongAccumulator, shared round1dp, delegate cache stats
- Replace CAS spin-loops in MethodMetrics with LongAccumulator(Math::min/max)
- Extract round1dp() helper to MonitoringController; remove inline rounding duplication
- Promote captureCacheStats() to PerformanceReportService interface; MonitoringController
  delegates to it, eliminating identical Caffeine iteration logic
- Cache BOTTLENECKS list as static final; add WARN log to silent Hibernate stats catch;
  use .toList() over Collectors.toList(); add HTTP_REQUESTS_METRIC constant