@@ -4,13 +4,15 @@ import com.github.benmanes.caffeine.cache.stats.CacheStats;
 import io.micrometer.core.instrument.MeterRegistry;
 import io.micrometer.core.instrument.Timer;
 import jakarta.persistence.EntityManagerFactory;
-import org.ecommerce.api.aspect.MethodMetrics;
 import org.ecommerce.api.aspect.PerformanceMonitoringAspect;
 import org.ecommerce.api.dto.PerformanceReportDto;
 import org.ecommerce.api.dto.PerformanceReportDto.*;
 import org.ecommerce.api.service.PerformanceReportService;
 import org.hibernate.SessionFactory;
 import org.hibernate.stat.Statistics;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.cache.Cache;
 import org.springframework.cache.CacheManager;
 import org.springframework.cache.caffeine.CaffeineCache;
 import org.springframework.stereotype.Service;
@@ -19,10 +21,136 @@ import java.lang.management.*;
 import java.time.Instant;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 @Service
 public class PerformanceReportServiceImpl implements PerformanceReportService {
+
+    private static final Logger log = LoggerFactory.getLogger(PerformanceReportServiceImpl.class);
+    private static final String HTTP_REQUESTS_METRIC = "http.server.requests";
+
+    // Bottleneck catalogue never changes — build once at class load, not per call
+    private static final List<IdentifiedBottleneck> BOTTLENECKS = List.of(
+        new IdentifiedBottleneck(
+            "CRITICAL", "N+1_QUERY",
+            "OrderServiceImpl.findItems()",
+            "OrderItemRepository.findByOrder_OrderId() returns items without JOIN FETCH on "
+            + "product. Accessing item.getProduct() on each element triggers N additional "
+            + "SELECT queries — one per order item.",
+            "Add a @EntityGraph or JPQL JOIN FETCH query in OrderItemRepository for the "
+            + "product association when loading items by order."
+        ),
+        new IdentifiedBottleneck(
+            "CRITICAL", "N+1_QUERY",
+            "ReviewServiceImpl.findAll()",
+            "ReviewRepository.search() returns a Page<ReviewEntity> with three lazily-loaded "
+            + "associations: product, user, and order. Iterating the page fires up to 3N "
+            + "additional SELECT queries on a single list request.",
+            "Add JOIN FETCH for product, user, and order in ReviewRepository.search(), or use "
+            + "@EntityGraph(attributePaths = {\"product\", \"user\", \"order\"})."
+        ),
+        new IdentifiedBottleneck(
+            "CRITICAL", "N+1_QUERY",
+            "CartServiceImpl.getItems()",
+            "CartItemRepository.findByCart_CartId() returns cart items with LAZY product "
+            + "association. Any caller that accesses item.getProduct() — e.g. to return "
+            + "price or name — triggers N additional SELECT queries.",
+            "Add a JPQL query with JOIN FETCH cart_item.product in CartItemRepository "
+            + "for the findByCartId use-case."
+        ),
+        new IdentifiedBottleneck(
+            "CRITICAL", "BLOCKING_LOOP",
+            "OrderServiceImpl.create()",
+            "Order creation iterates over N line items, calling productRepository.findById() "
+            + "once per item (N SELECT queries) then orderItemRepository.save() once per item "
+            + "(N INSERT statements). For a 10-item order this is 20 sequential DB round-trips.",
+            "Batch-load all products with productRepository.findAllById(ids) before the loop "
+            + "(1 IN query). Collect order items into a list and save with "
+            + "orderItemRepository.saveAll() to leverage JDBC batch inserts."
+        ),
+        new IdentifiedBottleneck(
+            "CRITICAL", "MISSING_INDEX",
+            "schema.sql — categories table",
+            "The categories table has no indexes other than the PK. Filtering or sorting by "
+            + "name (LIKE, lower(name)) or is_active results in a full sequential scan on "
+            + "every request.",
+            "Add: CREATE INDEX idx_categories_name ON categories (lower(name)); "
+            + "CREATE INDEX idx_categories_active ON categories (is_active);"
+        ),
+        new IdentifiedBottleneck(
+            "HIGH", "CACHE_EVICTION",
+            "ProductServiceImpl.create()",
+            "@CacheEvict(value=\"products\", allEntries=true) flushes the entire products "
+            + "cache whenever a single product is added. All subsequent reads miss the cache "
+            + "until entries are individually re-warmed.",
+            "Change to @CacheEvict(key=\"#result.productId\") or use a cache-aside pattern "
+            + "that only evicts the new entry. The list-view cache (if added) can use a "
+            + "separate cache name invalidated by key."
+        ),
+        new IdentifiedBottleneck(
+            "HIGH", "UNCACHED_SEARCH",
+            "ProductServiceImpl.findAll()",
+            "Every call to the product search endpoint executes a native-SQL full-text search "
+            + "query (searchFts) against PostgreSQL. Popular keyword searches hit the database "
+            + "on every request — no result caching is in place.",
+            "Cache the paginated search results: @Cacheable(value=\"productSearch\", "
+            + "key=\"{#keyword,#categoryId,#status,#sellerId,#pageable}\") with a short TTL "
+            + "(e.g. 2 minutes) in the Caffeine spec."
+        ),
+        new IdentifiedBottleneck(
+            "HIGH", "N+1_QUERY",
+            "PaymentServiceImpl.findAll()",
+            "PaymentRepository.search() returns a Page<PaymentEntity> with a lazily-loaded "
+            + "order association. Callers that access payment.getOrder() fire N additional "
+            + "SELECT queries.",
+            "Add JOIN FETCH payment.order in PaymentRepository.search() JPQL query, or "
+            + "annotate with @EntityGraph(attributePaths = {\"order\"})."
+        ),
+        new IdentifiedBottleneck(
+            "HIGH", "MISSING_INDEX",
+            "schema.sql — cart_items table",
+            "cart_items has no secondary indexes. Queries that filter by cart_id or "
+            + "product_id (e.g. finding items in a cart) perform full-table scans as the "
+            + "table grows.",
+            "Add: CREATE INDEX idx_cart_items_cart_id ON cart_items (cart_id); "
+            + "CREATE INDEX idx_cart_items_product_id ON cart_items (product_id);"
+        ),
+        new IdentifiedBottleneck(
+            "MEDIUM", "MISSING_INDEX",
+            "schema.sql — reviews(product_id, is_approved)",
+            "Filtering approved reviews for a product (the public storefront use-case) "
+            + "requires scanning all reviews for a product_id without a covering index on "
+            + "the (product_id, is_approved) combination.",
+            "Add: CREATE INDEX idx_reviews_product_approved ON reviews (product_id, is_approved);"
+        ),
+        new IdentifiedBottleneck(
+            "MEDIUM", "MEMORY_LEAK",
+            "TokenBlacklistService",
+            "Revoked JWT tokens are stored in a ConcurrentHashMap with no expiry or cleanup. "
+            + "Over time the map grows unboundedly, increasing heap pressure and slowing "
+            + "every token-blacklist lookup.",
+            "Schedule a nightly purge with @Scheduled(cron=\"0 0 2 * * *\") that removes "
+            + "entries whose associated token expiry timestamp has passed."
+        ),
+        new IdentifiedBottleneck(
+            "MEDIUM", "MULTI_QUERY",
+            "OrderServiceImpl.getStats()",
+            "getStats() issues two separate aggregate queries: orderRepository.getStatsByStatus() "
+            + "and orderRepository.sumPaidRevenue(). These two round-trips could be combined "
+            + "into a single query.",
+            "Combine into one native SQL query that returns both status-group counts and the "
+            + "paid revenue sum in a single round-trip, reducing latency by ~50% for the "
+            + "stats endpoint."
+        ),
+        new IdentifiedBottleneck(
+            "LOW", "CACHE_EVICTION",
+            "UserServiceImpl.create()",
+            "@CacheEvict(value=\"users\", allEntries=true) on user registration flushes all "
+            + "cached user entries. In a write-heavy registration flow this degrades cache "
+            + "effectiveness for all concurrent user lookups.",
+            "Change to @CacheEvict(key=\"#result.userId\") on create and update, so only "
+            + "the affected user entry is invalidated."
+        )
+    );
 
     private final PerformanceMonitoringAspect monitoringAspect;
     private final CacheManager               cacheManager;
@@ -54,131 +182,14 @@ public class PerformanceReportServiceImpl implements PerformanceReportService {
 
     @Override
     public List<IdentifiedBottleneck> getBottlenecks() {
-        return List.of(
-            new IdentifiedBottleneck(
-                "CRITICAL", "N+1_QUERY",
-                "OrderServiceImpl.findItems()",
-                "OrderItemRepository.findByOrder_OrderId() returns items without JOIN FETCH on "
-                + "product. Accessing item.getProduct() on each element triggers N additional "
-                + "SELECT queries — one per order item.",
-                "Add a @EntityGraph or JPQL JOIN FETCH query in OrderItemRepository for the "
-                + "product association when loading items by order."
-            ),
-            new IdentifiedBottleneck(
-                "CRITICAL", "N+1_QUERY",
-                "ReviewServiceImpl.findAll()",
-                "ReviewRepository.search() returns a Page<ReviewEntity> with three lazily-loaded "
-                + "associations: product, user, and order. Iterating the page fires up to 3N "
-                + "additional SELECT queries on a single list request.",
-                "Add JOIN FETCH for product, user, and order in ReviewRepository.search(), or use "
-                + "@EntityGraph(attributePaths = {\"product\", \"user\", \"order\"})."
-            ),
-            new IdentifiedBottleneck(
-                "CRITICAL", "N+1_QUERY",
-                "CartServiceImpl.getItems()",
-                "CartItemRepository.findByCart_CartId() returns cart items with LAZY product "
-                + "association. Any caller that accesses item.getProduct() — e.g. to return "
-                + "price or name — triggers N additional SELECT queries.",
-                "Add a JPQL query with JOIN FETCH cart_item.product in CartItemRepository "
-                + "for the findByCartId use-case."
-            ),
-            new IdentifiedBottleneck(
-                "CRITICAL", "BLOCKING_LOOP",
-                "OrderServiceImpl.create()",
-                "Order creation iterates over N line items, calling productRepository.findById() "
-                + "once per item (N SELECT queries) then orderItemRepository.save() once per item "
-                + "(N INSERT statements). For a 10-item order this is 20 sequential DB round-trips.",
-                "Batch-load all products with productRepository.findAllById(ids) before the loop "
-                + "(1 IN query). Collect order items into a list and save with "
-                + "orderItemRepository.saveAll() to leverage JDBC batch inserts."
-            ),
-            new IdentifiedBottleneck(
-                "CRITICAL", "MISSING_INDEX",
-                "schema.sql — categories table",
-                "The categories table has no indexes other than the PK. Filtering or sorting by "
-                + "name (LIKE, lower(name)) or is_active results in a full sequential scan on "
-                + "every request.",
-                "Add: CREATE INDEX idx_categories_name ON categories (lower(name)); "
-                + "CREATE INDEX idx_categories_active ON categories (is_active);"
-            ),
-            new IdentifiedBottleneck(
-                "HIGH", "CACHE_EVICTION",
-                "ProductServiceImpl.create()",
-                "@CacheEvict(value=\"products\", allEntries=true) flushes the entire products "
-                + "cache whenever a single product is added. All subsequent reads miss the cache "
-                + "until entries are individually re-warmed.",
-                "Change to @CacheEvict(key=\"#result.productId\") or use a cache-aside pattern "
-                + "that only evicts the new entry. The list-view cache (if added) can use a "
-                + "separate cache name invalidated by key."
-            ),
-            new IdentifiedBottleneck(
-                "HIGH", "UNCACHED_SEARCH",
-                "ProductServiceImpl.findAll()",
-                "Every call to the product search endpoint executes a native-SQL full-text search "
-                + "query (searchFts) against PostgreSQL. Popular keyword searches hit the database "
-                + "on every request — no result caching is in place.",
-                "Cache the paginated search results: @Cacheable(value=\"productSearch\", "
-                + "key=\"{#keyword,#categoryId,#status,#sellerId,#pageable}\") with a short TTL "
-                + "(e.g. 2 minutes) in the Caffeine spec."
-            ),
-            new IdentifiedBottleneck(
-                "HIGH", "N+1_QUERY",
-                "PaymentServiceImpl.findAll()",
-                "PaymentRepository.search() returns a Page<PaymentEntity> with a lazily-loaded "
-                + "order association. Callers that access payment.getOrder() fire N additional "
-                + "SELECT queries.",
-                "Add JOIN FETCH payment.order in PaymentRepository.search() JPQL query, or "
-                + "annotate with @EntityGraph(attributePaths = {\"order\"})."
-            ),
-            new IdentifiedBottleneck(
-                "HIGH", "MISSING_INDEX",
-                "schema.sql — cart_items table",
-                "cart_items has no secondary indexes. Queries that filter by cart_id or "
-                + "product_id (e.g. finding items in a cart) perform full-table scans as the "
-                + "table grows.",
-                "Add: CREATE INDEX idx_cart_items_cart_id ON cart_items (cart_id); "
-                + "CREATE INDEX idx_cart_items_product_id ON cart_items (product_id);"
-            ),
-            new IdentifiedBottleneck(
-                "MEDIUM", "MISSING_INDEX",
-                "schema.sql — reviews(product_id, is_approved)",
-                "Filtering approved reviews for a product (the public storefront use-case) "
-                + "requires scanning all reviews for a product_id without a covering index on "
-                + "the (product_id, is_approved) combination.",
-                "Add: CREATE INDEX idx_reviews_product_approved ON reviews (product_id, is_approved);"
-            ),
-            new IdentifiedBottleneck(
-                "MEDIUM", "MEMORY_LEAK",
-                "TokenBlacklistService",
-                "Revoked JWT tokens are stored in a ConcurrentHashMap with no expiry or cleanup. "
-                + "Over time the map grows unboundedly, increasing heap pressure and slowing "
-                + "every token-blacklist lookup.",
-                "Schedule a nightly purge with @Scheduled(cron=\"0 0 2 * * *\") that removes "
-                + "entries whose associated token expiry timestamp has passed."
-            ),
-            new IdentifiedBottleneck(
-                "MEDIUM", "MULTI_QUERY",
-                "OrderServiceImpl.getStats()",
-                "getStats() issues two separate aggregate queries: orderRepository.getStatsByStatus() "
-                + "and orderRepository.sumPaidRevenue(). These two round-trips could be combined "
-                + "into a single query.",
-                "Combine into one native SQL query that returns both status-group counts and the "
-                + "paid revenue sum in a single round-trip, reducing latency by ~50% for the "
-                + "stats endpoint."
-            ),
-            new IdentifiedBottleneck(
-                "LOW", "CACHE_EVICTION",
-                "UserServiceImpl.create()",
-                "@CacheEvict(value=\"users\", allEntries=true) on user registration flushes all "
-                + "cached user entries. In a write-heavy registration flow this degrades cache "
-                + "effectiveness for all concurrent user lookups.",
-                "Change to @CacheEvict(key=\"#result.userId\") on create and update, so only "
-                + "the affected user entry is invalidated."
-            )
-        );
+        return BOTTLENECKS;
     }
 
-    // ── Private helpers ───────────────────────────────────────────────────────
+    // ── Helpers ───────────────────────────────────────────────────────────────
+
+    private static double round1dp(double v) {
+        return Math.round(v * 10.0) / 10.0;
+    }
 
     private JvmSnapshot captureJvm() {
         MemoryMXBean memBean = ManagementFactory.getMemoryMXBean();
@@ -195,7 +206,7 @@ public class PerformanceReportServiceImpl implements PerformanceReportService {
         double cpuUsagePct = -1.0;
         OperatingSystemMXBean osBean = ManagementFactory.getOperatingSystemMXBean();
         if (osBean instanceof com.sun.management.OperatingSystemMXBean sunOsBean) {
-            cpuUsagePct = Math.round(sunOsBean.getProcessCpuLoad() * 10000.0) / 100.0;
+            cpuUsagePct = round1dp(sunOsBean.getProcessCpuLoad() * 100.0);
         }
 
         int  threadCount   = ManagementFactory.getThreadMXBean().getThreadCount();
@@ -224,7 +235,7 @@ public class PerformanceReportServiceImpl implements PerformanceReportService {
                     stats.getEntityLoadCount()
             );
         } catch (Exception e) {
-            // Statistics not available (generate_statistics=false or non-Hibernate provider)
+            log.warn("Hibernate statistics unavailable — is generate_statistics=true? {}", e.getMessage());
             return new HibernateStats(0L, 0L, "statistics-unavailable", 0L);
         }
     }
@@ -235,19 +246,20 @@ public class PerformanceReportServiceImpl implements PerformanceReportService {
                         m.getMethodKey(),
                         m.getInvocations(),
                         m.getSlowInvocations(),
-                        Math.round(m.getAvgTimeMs() * 10.0) / 10.0,
+                        round1dp(m.getAvgTimeMs()),
                         m.getMinTimeMs(),
                         m.getMaxTimeMs()
                 ))
                 .sorted(Comparator.comparingDouble(ServiceMethodStat::getAvgTimeMs).reversed())
                 .limit(10)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    private Map<String, CacheStatsSummary> captureCacheStats() {
+    @Override
+    public Map<String, CacheStatsSummary> captureCacheStats() {
         Map<String, CacheStatsSummary> result = new LinkedHashMap<>();
         cacheManager.getCacheNames().forEach(name -> {
-            org.springframework.cache.Cache cache = cacheManager.getCache(name);
+            Cache cache = cacheManager.getCache(name);
             if (cache instanceof CaffeineCache caffeineCache) {
                 CacheStats stats = caffeineCache.getNativeCache().stats();
                 result.put(name, new CacheStatsSummary(
@@ -263,20 +275,20 @@ public class PerformanceReportServiceImpl implements PerformanceReportService {
     }
 
     private List<HttpEndpointStat> captureHttpStats() {
-        Collection<Timer> timers = meterRegistry.find("http.server.requests").timers();
-        if (timers == null || timers.isEmpty()) return Collections.emptyList();
+        Collection<Timer> timers = meterRegistry.find(HTTP_REQUESTS_METRIC).timers();
+        if (timers.isEmpty()) return Collections.emptyList();
 
         return timers.stream()
                 .map(t -> new HttpEndpointStat(
                         t.getId().getTag("uri"),
                         t.getId().getTag("method"),
                         (long) t.count(),
-                        Math.round(t.mean(TimeUnit.MILLISECONDS) * 10.0) / 10.0,
-                        Math.round(t.max(TimeUnit.MILLISECONDS)  * 10.0) / 10.0
+                        round1dp(t.mean(TimeUnit.MILLISECONDS)),
+                        round1dp(t.max(TimeUnit.MILLISECONDS))
                 ))
                 .filter(s -> s.getRequestCount() > 0)
                 .sorted(Comparator.comparingDouble(HttpEndpointStat::getMeanMs).reversed())
                 .limit(10)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
